Bug 1699263 - Fix the issue that we unconditionally use autoBSize when we specify the block size and aspect-ratio. r=TYLin

Also, rewrite CalculateAbsoluteSizeWithResolvedAutoBlockSize(). Move
all the aspect-ratio checks into this function, so make the caller simplier.

Differential Revision: https://phabricator.services.mozilla.com/D109568